Add Multinet convertors
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C43135

--- a/Retail/Code/Retail.MultiNet.Business/Retail.MultiNet.Business.csproj
+++ b/Retail/Code/Retail.MultiNet.Business/Retail.MultiNet.Business.csproj
@@ -112,10 +112,13 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Convertors\AccountConvertor.cs" />
     <Compile Include="Convertors\BranchConvertor.cs" />
     <Compile Include="Convertors\CompanyConvertor.cs" />
+    <Compile Include="Convertors\CustomerConvertor.cs" />
     <Compile Include="Convertors\DIDConvertor.cs" />
     <Compile Include="Convertors\SubscriberConvertor.cs" />
+    <Compile Include="Convertors\UserConvertor.cs" />
     <Compile Include="ExtendedInfo\MultiNetBranchExtendedInfo.cs" />
     <Compile Include="ExtendedInfo\MultiNetBranchExtendedInfoDefinition.cs" />
     <Compile Include="ExtendedInfo\MultiNetCompanyExtendedInfo.cs" />
