Added BulkActionCorrectedData classes
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C43168

--- a/TOneV2/Code/TOneV2/TOne.WhS.Sales.Entities/TOne.WhS.Sales.Entities.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Sales.Entities/TOne.WhS.Sales.Entities.csproj
@@ -62,6 +62,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BulkActions\ApplyActionToDraftInput.cs" />
+    <Compile Include="BulkActions\BulkActionCorrectedData.cs" />
     <Compile Include="BulkActions\BulkActionTypeSettings.cs" />
     <Compile Include="BulkActions\BulkActionValidationResult.cs" />
     <Compile Include="BulkActions\BulkActionZoneFilter.cs" />
