--- a/TOneV2/Code/TOneV2/TOne.WhS.Sales.Web/TOne.WhS.Sales.Web.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Sales.Web/TOne.WhS.Sales.Web.csproj
@@ -176,6 +176,7 @@
     <Content Include="WhS_Sales\Constants\PeriodTypes.js" />
     <Content Include="WhS_Sales\Constants\RatePlanDefinitionEnum.js" />
     <Content Include="WhS_Sales\Constants\RatePlanStatusEnum.js" />
+    <Content Include="WhS_Sales\Constants\SaleAreaSettingsContextEnum.js" />
     <Content Include="WhS_Sales\Constants\SalePriceListOwnerTypeEnum.js" />
     <Content Include="WhS_Sales\Constants\SpecificApplicableZoneEntityTypeEnum.js" />
     <Content Include="WhS_Sales\Directives\BulkAction\Templates\BulkActionTypeSelectiveTemplate.html" />
