--- a/Retail/Code/Retail.Teles.Web/Retail.Teles.Web.csproj
+++ b/Retail/Code/Retail.Teles.Web/Retail.Teles.Web.csproj
@@ -132,8 +132,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Constants.cs" />
+    <Compile Include="Controllers\TelesUserController.cs" />
     <Compile Include="Controllers\TelesEnterpriseController.cs" />
     <Compile Include="Controllers\TelesRoutingGroupController.cs" />
+    <Compile Include="Controllers\TelesDomainController.cs" />
     <Compile Include="Controllers\TelesSiteController.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -162,10 +164,14 @@
     <Content Include="Retail_Teles\Constant\NewRGMultiMatchHandlingEnum.js" />
     <Content Include="Retail_Teles\Constant\NewRGNoMatchHandlingEnum.js" />
     <Content Include="Retail_Teles\Constant\RoutingGroupFilterOperatorEnum.js" />
+    <Content Include="Retail_Teles\Directives\AccountAction\MappingTelesAccountAction\MappingTelesUserEditorController.js" />
     <Content Include="Retail_Teles\Directives\AccountAction\MappingTelesAccountAction\MappingTelesSiteEditorController.js" />
     <Content Include="Retail_Teles\Directives\AccountAction\MappingTelesAccountAction\MappingTelesAccountEditorController.js" />
+    <Content Include="Retail_Teles\Directives\AccountAction\MappingTelesAccountAction\retail-teles-accountactiondefinitionsettings-mappingtelesuser.js" />
     <Content Include="Retail_Teles\Directives\AccountAction\MappingTelesAccountAction\retail-teles-accountactiondefinitionsettings-mappingtelessite.js" />
     <Content Include="Retail_Teles\Directives\AccountAction\MappingTelesAccountAction\retail-teles-accountactiondefinitionsettings-mappingtelesaccount.js" />
+    <Content Include="Retail_Teles\Directives\AccountAction\MappingTelesAccountAction\Templates\MappingTelesUserEditor.html" />
+    <Content Include="Retail_Teles\Directives\AccountAction\MappingTelesAccountAction\Templates\MappingTelesUserActionSettingsTemplate.html" />
     <Content Include="Retail_Teles\Directives\AccountAction\MappingTelesAccountAction\Templates\MappingTelesSiteEditor.html" />
     <Content Include="Retail_Teles\Directives\AccountAction\MappingTelesAccountAction\Templates\MappingTelesSiteActionSettingsTemplate.html" />
     <Content Include="Retail_Teles\Directives\AccountAction\MappingTelesAccountAction\Templates\MappingTelesAccountActionSettingsTemplate.html" />
@@ -200,11 +206,15 @@
     <Content Include="Retail_Teles\Directives\ConnectionTypes\Templates\TelesRestConnectionEditorTemplate.html" />
     <Content Include="Retail_Teles\Directives\TelesEnterprises\MainExtensions\retail-teles-accountextrafield-enterprise.js" />
     <Content Include="Retail_Teles\Directives\TelesEnterprises\MainExtensions\Templates\EnterpriseAccountExtraFieldTemplate.html" />
+    <Content Include="Retail_Teles\Directives\TelesEnterprises\retail-teles-domains-selector.js" />
     <Content Include="Retail_Teles\Directives\TelesEnterprises\retail-teles-enterprisebedefinition-editor.js" />
     <Content Include="Retail_Teles\Directives\TelesEnterprises\retail-teles-sites-selector.js" />
     <Content Include="Retail_Teles\Directives\TelesEnterprises\retail-teles-enterprises-selector.js" />
+    <Content Include="Retail_Teles\Directives\TelesEnterprises\retail-teles-users-selector.js" />
     <Content Include="Retail_Teles\Directives\TelesEnterprises\Templates\TelesEnterpriseBEDefinitionEditorTemplate.html" />
     <Content Include="Retail_Teles\ModuleInitialization.js" />
+    <Content Include="Retail_Teles\Services\APIServices\DomainAPIService.js" />
+    <Content Include="Retail_Teles\Services\APIServices\UserAPIService.js" />
     <Content Include="Retail_Teles\Services\APIServices\SiteAPIService.js" />
     <Content Include="Retail_Teles\Services\APIServices\EnterpriseAPIService.js" />
     <Content Include="Retail_Teles\Services\APIServices\TelesRoutingGroupAPIService.js" />
