Added the ApplyCorrectedData method to BulkActions and implemented it on the RateBulkAction
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C43184

--- a/TOneV2/Code/TOneV2/TOne.WhS.Sales.Business/TOne.WhS.Sales.Business.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Sales.Business/TOne.WhS.Sales.Business.csproj
@@ -99,6 +99,8 @@
     <Compile Include="BulkAction\ApplyBulkActionToDefaultDraftContext.cs" />
     <Compile Include="BulkAction\ApplyBulkActionToZoneDraftContext.cs" />
     <Compile Include="BulkAction\ApplyBulkActionToZoneItemContext.cs" />
+    <Compile Include="BulkAction\ApplyCorrectedDataContext.cs" />
+    <Compile Include="BulkAction\BulkActionUtilities.cs" />
     <Compile Include="BulkAction\Input\ContextZoneItemInput.cs" />
     <Compile Include="BusinessRules\BusinessRuleUtilities.cs" />
     <Compile Include="BusinessRules\Conditions\ConflictingRateCurrenciesCondition.cs" />
