--- a/TOneV2/Code/TOneV2/TOne.WhS.RouteSync.TelesIdb/TOne.WhS.RouteSync.TelesIdb.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.RouteSync.TelesIdb/TOne.WhS.RouteSync.TelesIdb.csproj
@@ -44,10 +44,15 @@
     <Reference Include="Vanrise.Data">
       <HintPath>..\..\..\..\Vanrise\Code\Output\Vanrise.Data.dll</HintPath>
     </Reference>
+    <Reference Include="Vanrise.Entities, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\Vanrise\Code\Output\Vanrise.Entities.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TelesRadiusSWSync.cs" />
+    <Compile Include="TelesIdbSWSyncOutput.cs" />
+    <Compile Include="TelesIdbSWSync.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\TOne.WhS.RouteSync.Entities\TOne.WhS.RouteSync.Entities.csproj">
