Add enum file for pricelist template header
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C43199

--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/TOne.WhS.BusinessEntity.Web.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/TOne.WhS.BusinessEntity.Web.csproj
@@ -226,6 +226,7 @@
     <Content Include="WhS_BusinessEntity\Constant\RoutingProductSaleZoneRelationTypeEnum.js" />
     <Content Include="WhS_BusinessEntity\Constant\RoutingProductSupplierRelationTypeEnum.js" />
     <Content Include="WhS_BusinessEntity\Constant\SalePriceListOwnerTypeEnum.js" />
+    <Content Include="WhS_BusinessEntity\Constant\SalePriceListTemplateMappedCellHeaderEnum.js" />
     <Content Include="WhS_BusinessEntity\Constant\SalePriceListTemplateSettingsCodesByZoneBEFieldEnum.js" />
     <Content Include="WhS_BusinessEntity\Constant\SalePriceListTypeEnum.js" />
     <Content Include="WhS_BusinessEntity\Constant\SupplierEntityServiceSourceEnum.js" />
