--- a/TOneV2/Code/TOneV2/TOne.WhS.RouteSync.TelesIdb/TOne.WhS.RouteSync.TelesIdb.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.RouteSync.TelesIdb/TOne.WhS.RouteSync.TelesIdb.csproj
@@ -50,6 +50,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="TelesIdbConvertedRoute.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TelesIdbSWSyncOutput.cs" />
     <Compile Include="TelesIdbSWSync.cs" />
