adding teles template entity
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C43217

--- a/Retail/Code/Retail.Teles.Entities/Retail.Teles.Entities.csproj
+++ b/Retail/Code/Retail.Teles.Entities/Retail.Teles.Entities.csproj
@@ -47,6 +47,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="TelesTemplateEntity\TelesTemplateEntityDefinitionSettings.cs" />
+    <Compile Include="TelesTemplateEntity\TelesTemplateEntitySettings.cs" />
     <Compile Include="EnterpriseAccountMappingInfo.cs" />
     <Compile Include="ITelesEnterpriseFilter.cs" />
     <Compile Include="ITelesEnterpriseSiteFilter.cs" />
