--- a/Retail/Code/Retail.Teles.Web/Retail.Teles.Web.csproj
+++ b/Retail/Code/Retail.Teles.Web/Retail.Teles.Web.csproj
@@ -209,6 +209,10 @@
     <Content Include="Retail_Teles\Directives\AccountAction\RoutingGroupCondition\Templates\RoutingGroupConditionTemplate.html" />
     <Content Include="Retail_Teles\Directives\AccountCondition\retail-teles-accountcondition-telesaccount.js" />
     <Content Include="Retail_Teles\Directives\AccountCondition\Templates\TelesAccountConditionTemplate.html" />
+    <Content Include="Retail_Teles\Directives\TelesTemplateEntity\Definition\retail-teles-telestemplateentitydefinitionsettings.js" />
+    <Content Include="Retail_Teles\Directives\TelesTemplateEntity\Definition\Templates\TelesTemplateEntityEntityDefinitionSettingDirective.html" />
+    <Content Include="Retail_Teles\Directives\TelesTemplateEntity\retail-teles-telestemplateentitysettings.js" />
+    <Content Include="Retail_Teles\Directives\TelesTemplateEntity\Templates\TelesTemplateEntityEntitySettings.html" />
     <Content Include="Retail_Teles\Directives\ConnectionTypes\retail-teles-telesrestconnection-editor.js" />
     <Content Include="Retail_Teles\Directives\ConnectionTypes\Templates\TelesRestConnectionEditorTemplate.html" />
     <Content Include="Retail_Teles\Directives\TelesEnterprises\MainExtensions\retail-teles-accountextrafield-enterprise.js" />
