Implement SalePriceListTemplateTableRow class for mapping values in Sale Pricelist
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C43225

--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Entities/TOne.WhS.BusinessEntity.Entities.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Entities/TOne.WhS.BusinessEntity.Entities.csproj
@@ -151,6 +151,7 @@
     <Compile Include="SalePricelistChanges\SalePriceListSnapshot.cs" />
     <Compile Include="SalePriceListTemplate\MappedSheet\IMappedCellContext.cs" />
     <Compile Include="SalePriceListTemplate\MappedSheet\SalePriceListTemplateSettingsMappedCellExtensionConfig.cs" />
+    <Compile Include="SalePriceListTemplate\SalePriceListTemplateTableRow.cs" />
     <Compile Include="SalePriceList\SalePriceListInput.cs" />
     <Compile Include="SalePriceList\SalePriceListOption.cs" />
     <Compile Include="SaleRate\History\CustomerZoneRates.cs" />
